 - Fixed Issue 351 - Added new ids for Vision VS6301 and updated Product Name (Justin)
 - Fixed Issue 348 - Typo in Config Index Number for zwave.me ZME_06436 (Justin)
 - Fix Several Warnings/Initilizers etc (Justin)
 - Fixed Issue 357 - Fixed Qubino manufacturer id from 345 (dec) to 159 (hex) (Alex)
 - Fixed Issue 356 - New ID for Fibaro FGMS001 (Alex) 
 - Do Not Open and Close the Log file on each message. Close it during the
   Destructor (Justin)
 - Race Condition in the RemoveDriver call and Notifications. Add a new
   Notification about the Driver being removed, and by default turn off
   NodeRemoved/ValueRemoved Notifications from being sent if the Driver is
   being unloaded. WARNING: If you call any manager functions that require
   the Driver after recieving this message, there is a high probability your
   application will crash with a SegV (Justin)
 - Fixed Issue 361 - Update Qubino ZMNHDA2 Config File, proper endpoint mapping (Alex)
 - Fixed Issue 359 - Update Qubino ZMNHBA2 Config File, fixed invalid group 4 (Alex)
 - Fixed Issue 360 - Add Config File for Popp 123658 (Alex)
 - Fixed Issue 364 - Update Schlagelink iTemp Config File, removed invalid char (Alex)
 - Fixed Issue 365 - Add Config File for Popp 123601 Plug-in Switch thanks to tony.b.hansson (Alex)
 - Fixed Issue 366 - Add Config File for Popp 123580 Plug-in Dimmer thanks to tony.b.hansson (Alex)
 - Fixed Issue 363 - Added new id for Schlagelink iTemp thanks to steph10200 (Alex)
 - Fixed Issue 370 - Fixed Config File for zwave.me 06433 thanks to geilername (Alex)
 - Fixed Issue 368 - Bounds Checking on our String Arrays (Justin)
 - Fixed Issue 362 - Fix Mapping between ValueGenre Names and Enum's. This
   might require you to delete your zwcfg_*.xml file if you encounter
   problems (Justin)
 - Fixed Issue 371 - Double ReleaseNodes on Invalid Node in GetNodeStatistics (Justin)
 - Fixed Issue 372 - Mutex Unlocking in the Driver::isPolled method (Justin)