@@ -167,9 +167,6 @@ install: $(LIBDIR)/libopenzwave.so.$(VERSION) doc $(top_builddir)/libopenzwave.p
 	install -m 0644 $(top_srcdir)/cpp/src/value_classes/*.h $(DESTDIR)/$(includedir)/value_classes/
 	install -d $(DESTDIR)/$(includedir)/platform/
 	install -m 0644 $(top_srcdir)/cpp/src/platform/*.h $(DESTDIR)/$(includedir)/platform/	
-#put our TinyXML and HIDAPI headers into the platform directory
-	install -m 0644 $(top_srcdir)/cpp/tinyxml/*.h $(DESTDIR)/$(includedir)/platform/
-	install -m 0644 $(top_srcdir)/cpp/hidapi/hidapi/*.h $(DESTDIR)/$(includedir)/platform/
 	install -d $(DESTDIR)/$(includedir)/platform/unix/
 	install -m 0644 $(top_srcdir)/cpp/src/platform/unix/*.h $(DESTDIR)/$(includedir)/platform/unix/
 	install -d $(DESTDIR)/$(includedir)/aes/
